<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:gravity="center"
        android:paddingBottom="20dp"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <TableRow>
        <TextView
            android:id="@+id/LabelUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/username"
            />
        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:inputType="text"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/LabelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            />
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </TableRow>

    <TableRow android:paddingTop="20dp">
        <Button
            android:id="@+id/btnGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="LoginGet"
            android:text="@string/btnGet"
            />
        <Button
            android:id="@+id/btnPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="LoginPost"
            android:text="@string/btnPost"
            />
    </TableRow>

    <TableRow android:paddingTop="20dp">
        <TextView
            android:id="@+id/LabelMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginMethod"
            />
        <TextView
            android:id="@+id/method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/method"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/LabelStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginStatus"
            android:paddingTop="20dp"
            />
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:paddingTop="20dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/LabelRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginRole"
            android:paddingTop="20dp"
            />
        <TextView
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:paddingTop="20dp"
            />
        </TableRow>
    </TableLayout>
</LinearLayout>